# DoWhy_Integration

./: .gitignore  README.md  ci_check.sh  pyproject.toml
docs/: dowhy_integration.md
results/: Test_results_dowhy_ready.json
tests/: generate_test_results_dowhy_ready.py  test_dowhy_package.py
